# roi-mailchimp-reporter

./: .cursorrules  .gitignore  README.md  build.sh  keys.pub  latest.json  package-lock.json  package.json  settings.example.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml  release-mac.yml  release-win.yml  release.yml
distribution/: README.md  RELEASE_TEMPLATE.md
distribution/macos/: README.md
distribution/macos/ROI Mailchimp Reporter.app/Contents/: Info.plist
legacy/: legacy_mailchimp_report.py
scripts/: build-release.sh  create-update.js  generate-update-key.js
src/: App.tsx  index.css  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  latest.json  rust-toolchain.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  main.json
src-tauri/icons/: generate-icons.bat  generate-icons.ps1  icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Updater.tsx
src/lib/: tauri.ts
src/pages/: Reports.tsx  RunReport.tsx  Settings.tsx
src/store/: reportStore.ts
src/types/: index.ts
