[package]
name = "roi-mailchimp-reporter"
version = "1.0.53"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["protocol-asset"]
protocol-asset = []

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "roi_mailchimp_reporter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
    "protocol-asset"
] }
tauri-plugin-updater = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
opener = "0.6.1"
dirs = "5.0"
base64 = "0.21"
url = "2.4"
tauri-plugin-process = "2.2.1"
tauri-plugin-app = "2.0.0-alpha.2"

