[package]
name = "roi-mailchimp-reporter"
version = "1.0.82"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "roi_mailchimp_reporter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = [
    "custom-protocol",
    "updater",
    "dialog-all",
    "shell-open"
] }
tauri-cli = { git = "https://github.com/tauri-apps/tauri", branch = "v1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
opener = "0.6.1"
dirs = "5.0"
base64 = "0.21"
url = "2.4"

